--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>SayHi - школа обучения английскому языку</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale = 1" />
+    <meta name="viewport" content="width=1700" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
     <link rel="stylesheet" href="css/home-page.css" />
     <link rel="stylesheet" href="css/modals-page.css" />
@@ -27,7 +27,7 @@
                 <a href="course.html" class="nav-a">Курсы</a>
                 <a href="teacher-adults.html" class="nav-a">Преподаватели</a>
                 <a href="#">Отзывы</a>
-                <a class="nav-cont">Контакты</a>
+                <a href="index.html#contacts" class="nav-cont">Контакты</a>
                 <a class="a-special" id="myBtn">Пробный урок</a>
             </nav>
         </div>
@@ -167,16 +167,6 @@
 
 
 
-    <div>
-        <div>
-            <img>
-            <p></p>
-            <p></p>
-        </div>
-    </div>
-
-
-
     <div class="footer-information">
         <div>
             <ul>
@@ -199,7 +189,7 @@
             </ul>
         </div>
     </div>
-    <div class="maps-footer">
+    <div class="maps-footer" id="contacts">
         <img src="image/maps.png">
     </div>
 
@@ -241,7 +231,6 @@
         <ul class="social-list-icon">
             <li><a href="course.html" class="social-list">Курсы</a></li>
             <li><a href="teacher-adults.html" class="social-list">Преподаватели</a></li>
-            <li><a href="#" class="social-list">Вопрос-ответ</a></li>
         </ul>
 
         <ul>
