--- a/sobes.html
+++ b/sobes.html
@@ -27,7 +27,7 @@
                 <a href="course.html" class="nav-a">Курсы</a>
                 <a href="teacher-adults.html" class="nav-a">Преподаватели</a>
                 <a href="#" class="nav-a">Отзывы</a>
-                <a href="#" class="nav-a">Контакты</a>
+                <a href="index.html#contacts" class="nav-a">Контакты</a>
                 <a href="#" class="nav-a" id="myBtn">Пробный урок</a>
             </nav>
         </div>
@@ -150,13 +150,12 @@
         <ul class="social-list-icon">
             <li><a href="course.html" class="social-list">Курсы</a></li>
             <li><a href="teacher-adults.html" class="social-list">Преподаватели</a></li>
-            <li><a href="#" class="social-list">Вопрос-ответ</a></li>
         </ul>
 
         <ul>
             <li><a href="#" class="social-list">Стоимость</a></li>
             <li><a href="#" class="social-list">Отзывы</a></li>
-            <li><a href="#" class="social-list">Адреса и телефоны</a></li>
+            <li><a href="index.html#contacts" class="social-list">Адреса и телефоны</a></li>
         </ul>
     </footer>
 
