--- a/alex.html
+++ b/alex.html
@@ -77,18 +77,19 @@
         <section>Другие преподаватели:</section>
     </div>
 
-
-    <div class="photo">
-        <img src="image/oleg/oleg.png">
-        <p>Олег</p>
-    </div>
-    <div class="photo">
-        <img src="image/kseniya/kseniya.png">
-        <p>Ксения</p>
-    </div>
-    <div class="photo">
-        <img src="image/vika/vika.png">
-        <p>Виктория</p>
+    <div class="photo-block">
+        <div class="photo">
+            <img src="image/oleg/oleg.png">
+            <p>Олег</p>
+        </div>
+        <div class="photo">
+            <img src="image/kseniya/kseniya.png">
+            <p>Ксения</p>
+        </div>
+        <div class="photo">
+            <img src="image/vika/vika.png">
+            <p>Виктория</p>
+        </div>
     </div>
 
 
