--- a/denis.html
+++ b/denis.html
@@ -81,19 +81,21 @@
 
 
     </div>
-    <div class="photo">
-        <img src="image/kate/kate.png">
-        <p>Екатерина</p>
-    </div>
-    <div class="photo">
-        <img src="image/oleg/oleg.png">
-        <p>Олег</p>
-    </div>
-    <div class="photo">
-        <img src="image/alex/alex.png">
-        <p>Александр</p>
-    </div>
 
+    <div class="photo-block">
+        <div class="photo">
+            <img src="image/kate/kate.png">
+            <p>Екатерина</p>
+        </div>
+        <div class="photo">
+            <img src="image/oleg/oleg.png">
+            <p>Олег</p>
+        </div>
+        <div class="photo">
+            <img src="image/alex/alex.png">
+            <p>Александр</p>
+        </div>
+    </div>
 
 
 
