--- a/kseniya.html
+++ b/kseniya.html
@@ -82,20 +82,20 @@
     </div>
 
 
-
-    <div class="photo">
-        <img src="image/vika/vika.png">
-        <p>Виктория</p>
+    <div class="photo-block">
+        <div class="photo">
+            <img src="image/vika/vika.png">
+            <p>Виктория</p>
+        </div>
+        <div class="photo">
+            <img src="image/alex/alex.png">
+            <p>Александр</p>
+        </div>
+        <div class="photo">
+            <img src="image/kate/kate.png">
+            <p>Екатерина</p>
+        </div>
     </div>
-    <div class="photo">
-        <img src="image/alex/alex.png">
-        <p>Александр</p>
-    </div>
-    <div class="photo">
-        <img src="image/kate/kate.png">
-        <p>Екатерина</p>
-    </div>
-
 
 
     <div class="prob-les">
