--- a/oleg.html
+++ b/oleg.html
@@ -81,17 +81,20 @@
     </div>
 
 
-    <div class="photo">
-        <img src="image/kate/kate.png">
-        <p>Екатерина</p>
-    </div>
-    <div class="photo">
-        <img src="image/sveta/sveta.png">
-        <p>Светлана</p>
-    </div>
-    <div class="photo">
-        <img src="image/denis/denis.png">
-        <p>Денис</p>
+
+    <div class="photo-block">
+        <div class="photo">
+            <img src="image/kate/kate.png">
+            <p>Екатерина</p>
+        </div>
+        <div class="photo">
+            <img src="image/sveta/sveta.png">
+            <p>Светлана</p>
+        </div>
+        <div class="photo">
+            <img src="image/denis/denis.png">
+            <p>Денис</p>
+        </div>
     </div>
 
 
