--- a/sveta.html
+++ b/sveta.html
@@ -80,19 +80,21 @@
     </div>
 
 
+    <div class="photo-block">
+        <div class="photo">
+            <img src="image/alex/alex.png">
+            <p>Александр</p>
+        </div>
+        <div class="photo">
+            <img src="image/kseniya/kseniya.png">
+            <p>Ксения</p>
+        </div>
+        <div class="photo">
+            <img src="image/denis/denis.png">
+            <p>Денис</p>
+        </div>
+    </div>
 
-    <div class="photo">
-        <img src="image/alex/alex.png">
-        <p>Александр</p>
-    </div>
-    <div class="photo">
-        <img src="image/kseniya/kseniya.png">
-        <p>Ксения</p>
-    </div>
-    <div class="photo">
-        <img src="image/denis/denis.png">
-        <p>Денис</p>
-    </div>
 
 
 
