--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>SayHi - школа обучения английскому языку</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1700" />
-    <meta name="viewport" content="height=device-height, initial-scale = 1" />
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0>
+    <meta name=" viewport" content="height=device-height, initial-scale = 1.0" />
     <link rel="stylesheet" href="css/home-page.css" />
     <link rel="stylesheet" href="css/modals-page.css" />
     <link rel="stylesheet" href="css/modalki.css">
