--- a/kate.html
+++ b/kate.html
@@ -80,19 +80,21 @@
     </div>
 
 
+    <div class="photo-block">
+        <div class="photo">
+            <img src="image/sveta/sveta.png">
+            <p>Светлана</p>
+        </div>
+        <div class="photo">
+            <img src="image/vika/vika.png">
+            <p>Виктория</p>
+        </div>
+        <div class="photo">
+            <img src="image/oleg/oleg.png">
+            <p>Олег</p>
+        </div>
+    </div>
 
-    <div class="photo">
-        <img src="image/sveta/sveta.png">
-        <p>Светлана</p>
-    </div>
-    <div class="photo">
-        <img src="image/vika/vika.png">
-        <p>Виктория</p>
-    </div>
-    <div class="photo">
-        <img src="image/oleg/oleg.png">
-        <p>Олег</p>
-    </div>
 
 
 
@@ -101,7 +103,7 @@
 
         <button id="myBtn">
             <p>Оставить заявку</p>
-        </button>
+        </button> 
 
     </div>
 
