--- a/vika.html
+++ b/vika.html
@@ -78,19 +78,21 @@
     </div>
 
 
+    <div class="photo-block">
+        <div class="photo">
+            <img src="image/sveta/sveta.png">
+            <p>Светлана</p>
+        </div>
+        <div class="photo">
+            <img src="image/oleg/oleg.png">
+            <p>Олег</p>
+        </div>
+        <div class="photo">
+            <img src="image/kseniya/kseniya.png">
+            <p>Ксения</p>
+        </div>
+    </div>
 
-    <div class="photo">
-        <img src="image/sveta/sveta.png">
-        <p>Светлана</p>
-    </div>
-    <div class="photo">
-        <img src="image/oleg/oleg.png">
-        <p>Олег</p>
-    </div>
-    <div class="photo">
-        <img src="image/kseniya/kseniya.png">
-        <p>Ксения</p>
-    </div>
 
 
 
